...
  String get auth_email => 'Email';

  @override
  String get auth_phone => 'Phone';

  @override
  String get auth_password => 'Password';

  @override
  String get auth_location => 'Location';

  @override
  String get auth_city => 'City';
...
