...
      child: BottomAppBar(
        color: Colors.white,
        elevation: 0,
        notchMargin: 8,
        child: Row(
          children: [
            _buildNavItem(Icons.home, 'Home', 0),
            _buildNavItem(Icons.search, 'Explorar', 1),
            const Spacer(),
            _buildNavItem(Icons.favorite_outline, 'Favoritos', 2),
            _buildNavItem(Icons.person_outline, 'Perfil', 3),
          ],
        ),
...
